<resources>
    <string name="app_name">DesafioFilmes</string>
    <string name="desc_imagem_filme">Imagem filme</string>
    <string name="desc_deletar">Deletar</string>
    <string name="menu_buscar">Buscar</string>
    <string name="tit_filmes_salvos">Filmes salvos</string>
    <string name="tit_detalhes">Detalhes</string>
    <string name="menu_salvar">Salvar</string>
    <string name="searchable_hint">Título do filme</string>
    <string name="lbl_filmes">Filmes</string>
    <string name="lbl_direcao">Direção</string>
    <string name="lbl_lancamento">Lançamento</string>
    <string name="lbl_tempo">Tempo</string>
    <string name="lbl_elenco">Elenco</string>
    <string name="err_mais_de_tres">Digite mais de 3 letras!</string>
    <string name="desc_action">Salvar/deletar</string>
    <string name="txt_info_filmes">SEUS FILMES SALVOS APARECERÃO AQUI</string>
</resources>
