<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="filme"
            type="br.com.zup.filmedesafio.android.model.FilmeModel"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_info_filmes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/txt_info_filmes"
            android:textSize="21sp"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_filmes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient"
            tools:context=".view.inicio.activity.MainActivity"
            android:visibility="gone">

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5"/>

            <com.synnapps.carouselview.CarouselView
                android:id="@+id/carousel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/guideline"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:slideInterval="0"/>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_conteudo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline">

                <ImageView
                    android:id="@+id/img_rem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/desc_deletar"
                    android:src="@drawable/ic_delete_white_24dp"
                    app:layout_constraintLeft_toRightOf="@id/txt_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/txt_title"/>

                <TextView
                    android:id="@+id/txt_title"
                    style="@style/Titulo"
                    android:text="@{filme.titulo}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/img_rem"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/txt_genero"
                    style="@style/SubTitulo"
                    android:text="@{filme.genre}"
                    app:layout_constraintLeft_toLeftOf="@id/txt_title"
                    app:layout_constraintRight_toRightOf="@id/txt_title"
                    app:layout_constraintTop_toBottomOf="@id/txt_title"/>

                <TextView
                    android:id="@+id/lbl_diretor"
                    style="@style/LabelInfo"
                    android:text="@string/lbl_direcao"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="@id/txt_genero"
                    app:layout_constraintTop_toBottomOf="@id/txt_genero"/>

                <TextView
                    android:id="@+id/txt_diretor"
                    style="@style/Info"
                    android:text="@{filme.director}"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="@id/lbl_diretor"
                    app:layout_constraintTop_toBottomOf="@id/lbl_diretor"/>

                <TextView
                    android:id="@+id/lbl_lancamento"
                    style="@style/LabelInfo"
                    android:text="@string/lbl_lancamento"
                    app:layout_constraintLeft_toLeftOf="@id/lbl_diretor"
                    app:layout_constraintTop_toBottomOf="@id/txt_diretor"/>

                <TextView
                    android:id="@+id/txt_lancamento"
                    style="@style/Info"
                    android:text="@{filme.year}"
                    app:layout_constraintLeft_toLeftOf="@id/lbl_lancamento"
                    app:layout_constraintTop_toBottomOf="@id/lbl_lancamento"/>

                <TextView
                    android:id="@+id/lbl_tempo"
                    style="@style/LabelInfo"
                    android:text="@string/lbl_tempo"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="@id/lbl_lancamento"
                    app:layout_constraintTop_toBottomOf="@id/txt_lancamento"/>

                <TextView
                    android:id="@+id/txt_tempo"
                    style="@style/Info"
                    android:text="@{filme.runtime}"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="@id/lbl_tempo"
                    app:layout_constraintTop_toBottomOf="@id/lbl_tempo"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lst_filmes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/item_list_search"
            android:visibility="gone"/>
    </FrameLayout>
</layout>